--- a/trabajo.ipynb
+++ b/trabajo.ipynb
@@ -9,18 +9,17 @@
     "* Hugo Ovide López - 44444394E\n",
     "* Rubén Sobrino Roldan - 49961700L"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
-   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
